[package]
name = "cubefs-bond"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.85"
serde = { version = "1.0.144", features = ["derive"] }
serde_derive = "1.0.144"
salvo = "0.34"
tokio = { version = "1", features = ["macros"] }
