[package]
name = "cubefs-bond"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.144"
serde_derive = "1.0.144"
serde_with = "2.0.1"
serde_json = "1.0.85"
tokio = { version = "1", features = ["macros"] }
figment = "0.10.7"
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "f10a2d7d9c6c8e78771d458714d476d0ffcd1812", features = [
  "json",
] }
